# food-calculator-django

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  food_db.sqlite3  import.py  manage.py  pyproject.toml  requirements.txt
calculator/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
calculator/migrations/: 0001_initial.py  0002_auto_20230515_1754.py
calculator/static/calculator/css/: styles.css
calculator/static/calculator/js/: calculator.js  get_category.js  search_panel.js
calculator/templates/: about.html
calculator/templates/calculator/: about.html  base.html  category.html  index.html
calculator_api/: apps.py  pagination.py  serializers.py  urls.py  views.py
config/: .env.example
data/: readme.txt
food_calculator/: settings.py  urls.py  wsgi.py
source/: import.py
source/api/calculator/: serializers.py  urls.py  views.py
source/apps/calculator/: admin.py  forms.py  models.py  urls.py  utils.py
source/apps/calculator/migrations/: 0001_initial.py
source/apps/calculator/static/calculator/css/: styles.css
source/apps/calculator/static/calculator/js/: calculator.js
source/apps/calculator/templates/calculator/: base.html  category.html  index.html
source/config/: .env.template  asgi.py  settings.py  urls.py
source/data/: categories.xlsx  products.xlsx
