[tool.poetry]
name = "food-calculator"
version = "0.1.0"
description = "My first Django project..."
authors = ["Your Name <you@example.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
Django = "^4.2"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.0"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
Pillow = "^10.0.0"
python-decouple = "^3.8"
SQLAlchemy = "^2.0.18"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
